# ja-tech-edit-score

./: .gitignore  Dockerfile.edit-sft  Dockerfile.edit-sft-eval  Dockerfile.pref-ce  Dockerfile.steering  Makefile  README.md  pyproject.toml  requirements-edit-sft.txt  requirements-pref-ce.txt  requirements-steering.txt  requirements.txt
data/: README.md  batch_import_repos.example.txt  examples.schema.json  examples.template.jsonl  hard_eval.schema.json  hard_eval.template.jsonl  section_mining_manifest.json  tech-writing-norms.md
docs/: ACTIVATION-STEERING.md  DOK-EDIT-SFT.md  DOK-PREF-CE.md  DOK-STEERING-PHASE-A.md  EDIT-MODEL.md  HARD-EVAL.md  ROADMAP.md  SFT-DPO.md  WHAT-WE-BUILT.md  WORKFLOW.md  article.md
outputs/: README.md
scripts/: analyze_hard_eval_margins.py  analyze_section_pairs.py  batch_import_repos.sh  batch_mine_heldout_sections.sh  batch_mine_sections.sh  build_dpo_dataset.py  build_hard_eval_v2.py  build_hard_eval_v2b_fable.py  build_pref_ce_image.sh  build_pref_dataset.py  build_push_edit_sft_eval_image.sh  build_push_edit_sft_image.sh  build_push_pref_ce_image.sh  build_push_steering_image.sh  build_section_pref_pipeline.sh  check_convergence.py  check_revision.py  check_revision_core.py  compare_pref_candidates_static.py  curate_dpo_dataset.py  dok_edit_sft.sh  dok_edit_sft_eval.sh  dok_pref_ce.sh  dok_steering_extract.sh  eval_pref_bt_xproject.py  eval_pref_ce_xproject.py  eval_pref_xproject.py  export_edit_sft.py  export_revision_pairs.py  extract_revision_activations.py  generate_edit_sft.py  git_branch_utils.py  import_examples.py  (+25 more)
(+5 files in other folders)
