[project]
name = "ja-tech-edit-score"
version = "0.1.0"
description = "選好評価モデル（日本語技術文書の推敲選好の学習と採点）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.20.0",
  "scikit-learn>=1.0.0",
  "joblib>=1.2.0",
  "sentence-transformers>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
  "README.md",
  "LICENSE",
  "Makefile",
  "requirements.txt",
  "outputs/README.md",
  "outputs/pref-static/model.joblib",
  "outputs/pref-static/metrics.json",
  "skills/README.md",
  "skills/ja-tech-edit-score-check/SKILL.md",
]
